--- a/frontend/src/scss/layout/_global-rules.scss
+++ b/frontend/src/scss/layout/_global-rules.scss
@@ -86,7 +86,7 @@ table {
 
 
 
-@media (max-width: 800px) {
+@media (max-width: 1000px) {
     /* fonts */
   P {
     font-family: "Poppins";
@@ -143,7 +143,7 @@ table {
 
 
 
-@media (max-width: 440px) {
+@media (max-width: 600px) {
     /* fonts */
   P {
     font-family: "Poppins";
