--- a/frontend/src/scss/layout/_header.scss
+++ b/frontend/src/scss/layout/_header.scss
@@ -245,7 +245,7 @@
 }
 
 
-@media (max-width: 440px)  {
+@media (max-width: 600px)  {
   .App-header {
     position: fixed;
     justify-content: center;
