--- a/frontend/src/scss/pages/Dashboard/dashboard.scss
+++ b/frontend/src/scss/pages/Dashboard/dashboard.scss
@@ -45,19 +45,22 @@
 }
 
 
-@media (max-width: 440px) {
+@media (max-width: 1000px) {
   .dashboard {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-top: 70px;
     .admin-panel {
       display: none;
     }
     .admin-side-menu {
+      position: fixed;
+      top: 0;
+      z-index: 100;
       width: 100%;
       padding: 1em;
-      // z-index: 20;
       background: $grd-main;
       display: flex;
       justify-content: space-between;
@@ -74,4 +77,9 @@
       padding: 1em 0;
     }
   }
+}
+
+
+
+@media (max-width: 600px) {
 }
